tests/negative/NestedPatternBraces.juvix
module NestedPatternBraces;

a : {A : Type} → Type;
a {{A}} ≔ a;

end;
